infrastructure/configs/cilium/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudflare-tunnel
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.abutt.dev"
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-passthrough
      protocol: TLS
      port: 443
      hostname: sso.abutt.dev
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
